Final draft is done

--- a/README.org
+++ b/README.org
@@ -132,7 +132,7 @@ Each of these topics will be covered below in more detail and by the end of this
 ** Tracking Work with TODOs
 The most basic component of Org Mode is the TODO, it describes something you want to accomplish. It can have lots of details such as when it was created, the current status, the importance, details, checklists, or the tags associated with it. Using TODO items you can keep track of tasks for work, chores to accomplish, or steps in a project, to name a few. A TODO item goes through a series of states to denote the progress you've made. By default the only two states are TODO and DONE however, this config file adds several new states which allows for expanded use cases.
 
-Here is an example TODO item entry that might appear in your ~todos.org~ file.
+Here is an example TODO item entry that might appear in your ~todos.org~ file. This is what the raw text looks like if you were to open it in another text editor.
 
 #+begin_src
  * TODO Create 3rd Quarter Presentation :finance:gary:
@@ -254,7 +254,7 @@ Since Carla has responded with the information we needed and we logged the resul
 
 ![[file:images/image-18-todo-2-is-done.png][TODO 2 is done]]
 
-At this point if you look in the Agenda view you will see your 1st TODO that is blocked and your 3rd TODO that you haven't started, but where is your 2nd TODO? The completed item is there, it just isn't shown by default. Move your cursor to somewhere in the Calendar (it won't work if you are in one of the TODO lists) and press ~v~ to bring up the view buffer.
+At this point if you look in the Agenda view and press ~r~ you will see your 1st TODO that is blocked and your 3rd TODO that you haven't started, but where is your 2nd TODO? The completed item is there, it just isn't shown by default. Move your cursor to somewhere in the Calendar (it won't work if you are in one of the TODO lists) and press ~v~ to bring up the view buffer.
 
 ![[file:images/image-19-agenda-views.png][agenda view options]]
 
@@ -267,12 +267,14 @@ Before we do any work on this task we need to update the meta data associated wi
 
 Start by navigating to the third and final action item called ~Compile results and send final report to Alice~ and hit ~C-c C-d~ to bring up the deadline selector. Now there are several different ways we could enter a date. We could type it out in one of several formats or we could click on the desired day in the calendar up top. However, we are lazy so we are going to specify the deadline in the easy manner possible. Since it is Monday and we want to make our deadline for Thursday at 11am, when the mini buffer appears so we can select a date, simply enter ~+3d 11am~ and hit return. This creates a deadline 3 days in the future at 11am. Now when we refresh the Agenda View we will see that this TODO is special! Because it has a deadline marked on it.
 
-Now that the deadline has been added go ahead and set it to ~IN-PROGRESS~ just like we've done twice before. Add a note of your choice explaining what you started working on. After the state has been changed we could add additional notes to this TODO that might describe the order we wanted our report to be in, a list of graphs and tables to include, or links to templates that should be used for these types of company reports. You can also make new subheadings by hitting ~C=return~ and then hitting ~tab~ to move the heading over. Subheadings should be labeled in ways that make sense to your task. You can easily rearrange headings by holding the ~alt~ key and pressing the ~up~ or ~down~ arrow.
+We are going to assume that Bob has returned on Tuesday and gotten us the information we need. So in that case we can change the first TODO from ~BLOCKED~ and to ~DONE~. At this point we can actually start work on the 3rd TODO.
+
+So, the deadline has been added so go ahead and set the state to ~IN-PROGRESS~ just like we've done twice before. Add a note of your choice explaining what you started working on. After the state has been changed we could add additional notes to this TODO that might describe the order we wanted our report to be in, a list of graphs and tables to include, or links to templates that should be used for these types of company reports. You can also make new subheadings by hitting ~C=return~ and then hitting ~tab~ to move the heading over. Subheadings should be labeled in ways that make sense to your task. You can easily rearrange headings by holding the ~alt~ key and pressing the ~up~ or ~down~ arrow.
 
 ** A New TODO
-At this point in the tutorial we will assume that two days have passed and two things happened, Bob got you the data you needed and you completed your report and sent it to Alice. You can now close those remaining TODOs and then refresh your Agenda to verify that they are closed. Now that all of our current tasks are complete we can focus on a new email from Alice. In it she tells us that she liked our report so much that she wants us to generate another report that forecasts the purchasing requirements of the next fiscal year. It also needs to have more details, more graphics, and should be presented to management in a week at the end of the month planning meeting. Since this new task didn't come in a meeting we are going to create a new TODO using the TODO capture template.
+At this point in the tutorial we will assume that two days have passed and you completed your report and sent it to Alice. You can now close those remaining TODOs and then refresh your Agenda to verify that they are closed. Now that all of our current tasks are complete we can focus on a new email from Alice. In it she tells us that she liked our report so much that she wants us to generate another report that forecasts the purchasing requirements of the next fiscal year. It also needs to have more details, more graphics, and should be presented to management in a week at the end of the month planning meeting. Since this new task didn't come in a meeting we are going to create a new TODO using the TODO capture template.
 
-Fire up the Capture Template with ~C-c c~ only this time hit ~t~ to create a new TODO. For the tags in the mini buffer put ~report~ and hit return. You will now see a new TODO template and your cursor will be on the heading line. Now we can enter a heading. Type in ~Create yearly report and presentaiton~ as your title. You can now press the down key or press ~C-n~ to go to the next line. Here you are going to enter the details ~I need to create another foreasting report as well as a presentation and present my findings to management in one week.~ Once you've added your description it is time to save your TODO. Press ~C-c C-c~ to save it.
+Fire up the Capture Template with ~C-c c~ only this time hit ~t~ to create a new TODO. For the tags in the mini buffer put ~report~ and hit return. You will now see a new TODO template and your cursor will be on the heading line. Now we can enter a heading. Type in ~Create yearly report and presentation~ as your title. You can now press the down key or press ~C-n~ to go to the next line. Here you are going to enter the details ~I need to create another forecasting report as well as a presentation and present my findings to management in one week.~ Once you've added your description it is time to save your TODO. Press ~C-c C-c~ to save it.
 
 <TODO BEFORE SAVE PIC>
 
@@ -283,15 +285,15 @@ As soon as you save your new TODO entry a file will appear on the left hand side
 ** Working the TODO
 This TODO is going to behave in the same way that the action items worked. You can change the state, set a deadline, add notes, etc. I encourage you to set it to ~IN-PROGRESS~, add your own note, and add a few lines describing what you are going to do. After you do that we are going to look at some more advanced ways of organizing your notes.
 
-At this point you have set your TODO to a state showing that you are currently working on it. You have added a note explaining the state change, now you can add some more details. Let's start with a new subheading called ~Subtasks~. Press ~C-Return~ to get a new heading and then press ~tab~ once to make it a 2nd level heading. From here, type ~Subtasks [/]~ and then hit return. We are going to create an auto-incrementing list. On the line after your heading, type ~- [ ] Gather notes~ and press return. Two interesting things should have happened. A new check box item should have appeared on the next line, and the ~Subtasks~ heading should now have a count of the check box items we created. To get out of the auto checkbox mode just hit return twice. Don't worry if the count looks wrong, that will get fixed shortly.
+At this point you have set your TODO to a state showing that you are currently working on it. You have added a note explaining the state change, now you can add some more details. Let's start with a new subheading called ~Subtasks~. Press ~C-Return~ to get a new heading and then press ~tab~ once to make it a 2nd level heading. From here, type ~Subtasks [/]~ and then hit return. We are going to create an auto-incrementing list. On the line after your heading, type ~- [ ] Create Tasks~ and press return. Two interesting things should have happened. A new check box item should have appeared on the next line, and the ~Subtasks~ heading should now have a count of the check box items we created. To get out of the auto checkbox mode just hit return twice. Don't worry if the count looks wrong, that will get fixed shortly.
 
-Go ahead and fill out a few more check box items until your list looks like the image below. We want our subtasks to include ~Create Tasks~, ~Find Sources~, ~Create Graphics~, ~Create Rough Draft~, ~Create Final Draft~, and ~Test Presentation~.
+Go ahead and fill out a few more check box items until your list looks like the image below. We want our subtasks to include ~Create Tasks~, ~Gather Notes~, ~Find Sources~, ~Create Graphics~, ~Create Rough Draft~, ~Create Final Draft~, and ~Test Presentation~.
 
 Once you've finished adding all the subtasks, go back to the first subtask called ~Create Tasks~. With your cursor anywhere on that line hit ~C-c C-c~. Look at that! There is now an ~X~ next to our completed subtask and the progress counter has incremented. This is useful!
 
 Things are really starting to take shape. We now have one sub heading that tracks all of our subtasks, now we need another heading for our presentation notes. So hit ~C-Return~ and then ~tab~ to create a new 2nd level sub heading and name this one ~Presentation Notes~. Here you would add notes on what you want to say in your presentation. Slides to use, people to thank, etc. Each subheading should relate to a different part of this project.
 
-Additional subheadings can be created as needed to further reflect other sources, ideas, or notes you wish to take. 
+Additional subheadings can be created as needed to further reflect other sources, ideas, or notes you wish to take. I've added a simple table as an example of how Org Mode treats tabular data. Read up on tables in the Org Manual to see all the amazing things it can do.
 
 ** Make a note
 At this point in the Tutorial we have covered most of the major concepts so I'm going to just end on a few simple things Org Mode can do for you. Perhaps the simplest thing is just a basic note. This note doesn't have a TODO associated with it, nor does it have a deadline, or even a tag. It is just a simple way of remembering something. I like to keep a notes file filled with random things that don't really belong anywhere. Since you can setup Emacs to search your org files (go look up Projectile among others) it is easy to find a specific note once you know what you are looking for.
@@ -334,7 +336,7 @@ I hope you found this simple tutorial useful. Emacs and Org Mode combine to make
 
 Likewise I want to stress to all new users that everything contained in this repo is just one way you can use Org Mode to organize your life. This isn't the *right* way because there is no universal *right* way, only a way that works for you. If you find some of these features useful but not others, then only use what you want. If you want to tweak the configurations listed here to better suite your tastes, then do so with my blessing. I sincerely hope that this software improves your life to the same degree it has improved mine. With that I leave you to go forth and do great things.
 
-** Further Reading
+* Further Reading
 If you came here looking for a more in depth explanation of some of Org Mode's core features, please check out the very detailed write up I did in my [[https://github.com/james-stoup/emacs-org-mode-tutorial/][Emacs Org Mode Tutorial]]. For the new people, you don't need to read that document (it is huge and can be daunting) as it is designed for people who want to really customize their Org Mode configurations. However, it does provide a lot of useful explanations with screenshots, so maybe come back to it once you've gotten some more experience with Org Mode.
 
 
